[package]
name = "pru"
description = "Procfile Runner UI"
version = "0.1.0"
authors = ["Martin Frost <frost@ceri.se>"]
edition = "2018"
repository = "https://github.com/frost/pru/"
homepage = "https://github.com/frost/pru/"
license = "MIT"
keywords = ["cli", "foreman", "procfile"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = "0.3.22"
