[package]
name = "pru"
description = "Procfile Runner UI"
version = "0.1.0"
authors = ["Martin Frost <frost@ceri.se>"]
edition = "2018"
repository = "https://github.com/frost/pru/"
homepage = "https://github.com/frost/pru/"
license = "MIT"
keywords = ["cli", "foreman", "procfile"]
categories = ["command-line-utilities"]
#
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
execute = "0.2"
crossterm = "0.19"
tui = { version = "0.15", default-features = false, features = ['crossterm'] }
clap = { version = "3.0.0-rc.8", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
assert_cmd = "1"
predicates = "2"

[build-dependencies]
clap = { version = "3.0.0-rc.8", features = ["derive"] }
